Build fail, sees sass loader has different setup, lets try this

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -11,7 +11,7 @@ $body-color: #333;
 $black: #2b2523;
 
 .navbar .navbar-menu {
-  box-shadow:none !important
+  box-shadow:none !important;
 }
 
 .content .taglist {
@@ -151,7 +151,7 @@ $menu-label-color: $white-ter;
 }
 +mobile {
   .blog-list-item header {
-    display: block
+    display: block;
   }
   .blog-list-item .featured-thumbnail {
     text-align: center;
